# kindle-to-pdf

./: .gitignore  AI_CONTEXT.md  README.md  main.py  pyproject.toml  requirements.txt  split_pdf.py
src/: __init__.py  capturer.py  converter.py  ocr_namer.py  splitter.py  types.py
